Font fix on mobile

--- a/style.css
+++ b/style.css
@@ -52,16 +52,16 @@ body{
     border-bottom: 1px #444 solid;
 }
 .vest:hover{
-    font-size: 11px;    
+    font-size: 22.5px;    
 }
 .pants:hover{
-    font-size: 11px;    
+    font-size: 22.5px;    
 }
 .shorts:hover{
-    font-size: 11px;    
+    font-size: 22.5px;    
 }
 .database:hover{
-    font-size: 11px;    
+    font-size: 22.5px;    
 }
 
 /*MOBILE MENU */
@@ -306,6 +306,18 @@ body{
     .menu.list-item.button{
         padding-right: 0;
     }
+    .vest:hover{
+        font-size: 11px;    
+    }
+    .pants:hover{
+        font-size: 11px;    
+    }
+    .shorts:hover{
+        font-size: 11px;    
+    }
+    .database:hover{
+        font-size: 11px;    
+    }
 }
 
 /* LANDSCAPE VIEW */
@@ -318,5 +330,17 @@ body{
         display: flex;
         width: 100%;
         height: 100%;
+    }
+    .vest:hover{
+        font-size: 11px;    
+    }
+    .pants:hover{
+        font-size: 11px;    
+    }
+    .shorts:hover{
+        font-size: 11px;    
+    }
+    .database:hover{
+        font-size: 11px;    
     }
 }
